# Take-Home-Assessment-

./: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  README.md  cmake_install.cmake  dashboard
